--- a/templates/SuggestSong.html
+++ b/templates/SuggestSong.html
@@ -1,9 +1,24 @@
 <!doctype html>
-<title>Add song</title>
-<form action="{{ url_for('submitsong') }}" method="Post"> 
-	<label for="artist">Artist:</label><br>
-	<input type="text" name="artist"><br>
-	<label for="song">Song:</label><br>
-	<input type="text" name="song"><br>
-	<input type="submit" value="Submit">
-</form>
+<head>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <title>Add song</title>
+</head>
+<body>
+  <form action="{{ url_for('submitsong') }}" method="Post"> 
+    <label for="artist">Artist:</label><br>
+    <input type="text" name="artist"><br>
+    <label for="song">Song:</label><br>
+    <input type="text" name="song"><br>
+    <input type="submit" value="Submit">
+  </form>
+  <script type="text/javascript">
+    $(document).ready(function(){
+    var socket = io.connect('http://' + document.domain + ':' + location.port ' '/suggestsong');
+    socket.on('show',function(msg) {
+    $('#log').append('recieved'):
+    });
+    });    
+  </script>
+</body>
