--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,20 @@
 <!doctype html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  </head>
  <body>
    <h1>CoverVote</h1>
-   <p><a href="{{ url_for('addsong') }}"><button>Add song</button></a></p>
+   <p>
+     <a href="{{ url_for('addsong') }}">
+       <button type="button" class="btn btn-lg">
+	 Add song
+       </button>
+     </a>
+   </p>
    <table class="table" style="padding-left:5px;">
      <th>Trackname</th>
      <th>Artist</th>
@@ -17,5 +29,35 @@
      </tr>
      {% endfor %}
    </table>
-</body>
+   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SuggestModal">
+     Open options
+   </button>
+   <div id="SuggestModal" class="modal fade">
+     <div class="modal-dialog">
+       <div class="modal-content">
+	 <div class="modal-header">
+	   <button type="button" class="close" data-dismiss="modal">&times</button>
+	   <h4 class="modal-title">Velg Sang</h4>
+	 </div>
+	 <div class="modal-body">
+	   <table id="Options" class="table table-hover table-condenced">
+	     <th>Trackname</th>
+	     <th>Artist</th>
+	     <th>Album</th>
+	     {% for song in search_result %}
+	     <tr>
+	       <th>{{ song["trackname"] }}</th>
+	       <td>{{ song["artist"] }} </td>
+	       <td>{{ song["album"] }} </td>
+	     </tr>
+	     {% endfor %}
+	   </table>
+	 </div>
+	 <div class="modal-footer">
+	 
+	 </div>
+       </div>
+     </div>
+   </div>
+ </body>
 </html>
