La til .js til bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css') }}"/>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootsrap.min.js') }}"/>
   </head>
  <body>
    <h1>CoverVote</h1>
