--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css') }}"/>
-    <script type="text/javascript" src="{{url_for('static', filename='js/bootsrap.min.js') }}"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    
   </head>
  <body>
    <h1>CoverVote</h1>
