--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,33 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css') }}"/>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    
+    <script type="text/javascript" src="{{url_for('static', filename='js/coverVote.js')}}"></script>
   </head>
  <body>
    <h1>CoverVote</h1>
    <p>
-     <a href="{{ url_for('addsong') }}">
-       <button type="button" class="btn btn-lg">
-	 Add song
-       </button>
-     </a>
+     <button type="button" id="addsong" class="btn btn-lg">
+       Add song
+     </button>
    </p>
-   <table class="table" style="padding-left:5px;">
+   <div class="submit_form">
+     <form action="{{ url_for('submitsong') }}" method="Post" id="submitsong"> 
+       <label for="artist">Artist:</label><br>
+       <input type="text" name="artist"><br>
+       <label for="song">Song:</label><br>
+       <input type="text" name="song"><br>
+       <input type="submit" value="Submit">
+     </form>
+     <script type="text/javascript">
+       $(document).ready(function(){
+       var socket = io.connect('http://' + document.domain + ':' + location.port ' '/suggestsong');
+       socket.on('show',function(msg) {
+       $('#log').append('recieved'):
+       });
+       });    
+     </script>
+   </div>
+    <table class="table" style="padding-left:5px;">
      <th>Trackname</th>
      <th>Artist</th>
      <th>Album</th>
@@ -30,10 +45,7 @@
      </tr>
      {% endfor %}
    </table>
-   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SuggestModal">
-     Open options
-   </button>
-   <div id="SuggestModal" class="modal fade">
+    <div id="SuggestModal" class="modal fade">
      <div class="modal-dialog">
        <div class="modal-content">
 	 <div class="modal-header">
