--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,7 @@
        Add song
      </button>
    </p>
-   <div class="submit_form">
-     <form action="{{ url_for('submitsong') }}" method="Post" id="submitsong"> 
-       <label for="artist">Artist:</label><br>
-       <input type="text" name="artist"><br>
-       <label for="song">Song:</label><br>
-       <input type="text" name="song"><br>
-       <input type="submit" value="Submit">
-     </form>
-   </div>
-    <table class="table" style="padding-left:5px;">
+   <table class="table" style="padding-left:5px;">
      <th>Trackname</th>
      <th>Artist</th>
      <th>Album</th>
@@ -42,24 +33,36 @@
        <div class="modal-content">
 	 <div class="modal-header">
 	   <button type="button" class="close" data-dismiss="modal">&times</button>
-	   <h4 class="modal-title">Velg Sang</h4>
+	   <h4 class="modal-title">Add Sang</h4>
 	 </div>
 	 <div class="modal-body">
-	   <table id="Options" class="table table-hover table-condenced">
-	     <th>Trackname</th>
-	     <th>Artist</th>
-	     <th>Album</th>
-	     {% for song in search_result %}
-	     <tr>
-	       <th>{{ song["trackname"] }}</th>
-	       <td>{{ song["artist"] }} </td>
-	       <td>{{ song["album"] }} </td>
-	     </tr>
-	     {% endfor %}
-	   </table>
+	     <div class="submit_form">
+	       <form action="{{ url_for('submitsong') }}" method="Post" id="submitsong"> 
+		 <label for="artist">Artist:</label><br>
+		 <input type="text" name="artist"><br>
+		 <label for="song">Song:</label><br>
+		 <input type="text" name="song"><br>
+		 <input type="submit" value="Submit">
+	       </form>
+	     </div>
+	     <div class="Options">
+	       <h4>Velg Sang</h4>
+	       <table class="table table-hover table-condenced">
+		 <th>Trackname</th>
+		 <th>Artist</th>
+		 <th>Album</th>
+		 {% for song in search_result %}
+		 <tr>
+		   <th>{{ song["trackname"] }}</th>
+		   <td>{{ song["artist"] }} </td>
+		   <td>{{ song["album"] }} </td>
+		 </tr>
+		 {% endfor %}
+	       </table>
+	     </div>
 	 </div>
        </div>
      </div>
-   </div>
+    </div>
  </body>
 </html>
