added discard av søk

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
      <div class="modal-dialog">
        <div class="modal-content">
 	 <div class="modal-header">
-	   <button type="button" class="close" data-dismiss="modal">&times</button>
+	   <button type="button" id="discard" class="close" data-dismiss="modal">&times</button>
 	   <h4 class="modal-title">Add Sang</h4>
 	 </div>
 	 <div class="modal-body">
